# meus_investimentos

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  app.py  main.py  pyproject.toml
data/: contributions.json
data/parsed/: 2025-08.json  2025-09.json  2025-10.json  2025-11.json  2025-12.json  2026-01.json  2026-02.json
pages/: detalhes.py
src/: auth.py  models.py  parser.py  storage.py
studies/: 01_pdfplumber.md  02_tesseract_ocr.md  03_streamlit.md  04_plotly.md  05_brazilian_number_parsing.md  06_docker_deployment.md  07_project_walkthrough.md
